--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap"
   rel="stylesheet">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+ <link rel="stylesheet" href="css/style.css">
  <title>OhMyFood</title>
 </head>
 
