--- a/index.html
+++ b/index.html
@@ -19,93 +19,95 @@
  <!-- HEADER -->
  <header>
   <div class="header_container">
-   <img src="/Images/logo/ohmyfood.png" alt="logo" class="header_logo">
+   <h1><img src="/Images/logo/ohmyfood.png" alt="logo" class="header_logo"></h1>
   </div>
  </header>
  <main>
   <!-- SECTION LOCALISATION -->
-  <section class="localisation">
+  <div class="localisation">
    <div class="localisation_container">
-    <form action="">
+    <form>
      <i class="fas fa-map-marker-alt localisation_ico"></i>
      <input type="search" value="Paris, Belleville">
     </form>
    </div>
-  </section>
+  </div>
+
   <!-- SECTION PRESENTATION -->
   <section class="presentation">
    <div class="presentation_container">
-    <h1>Réservez le menu qui vous convient</h1>
+    <h2>Réservez le menu qui vous convient</h2>
     <p>Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
     <a href="#">Explorer nos restaurants</a>
    </div>
   </section>
   <!-- SECTION FONCTIONNEMENT -->
-  <section class="fonctionnement">
-   <div class="fonctionnement_container">
-    <h2>Fonctionnement</h2>
+  <section class="howToUse">
+   <div class="howToUse_container">
+    <h3>Fonctionnement</h3>
     <button>
      <span>1</span>
      <i class="fas fa-mobile-alt"></i>
-     <p>Choisissez un restaurant</p>
+     Choisissez un restaurant
     </button>
     <button>
      <span>2</span>
      <i class="fas fa-list-ul"></i>
-     <p>Composez votre menu</p>
+     Composez votre menu
     </button>
     <button>
      <span>3</span>
      <i class="fas fa-store"></i>
-     <p>Dégustez au restaurant</p>
+     Dégustez au restaurant
     </button>
    </div>
   </section>
   <!-- SECTION RESTAURANT -->
   <section class="restaurant">
    <div class="restaurant_container">
-    <h2>Restaurants</h2>
-    <a href="/la_palette_du_gout.html">
+    <h3>Restaurants</h3>
+    <a href="html/la_palette_du_gout.html">
      <article>
       <span>Nouveau</span>
       <img src="/Images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
        alt="photo d'un plat de la palette du gout">
       <div class="card_desc">
-       <h3>La palette du goût</h3>
+       <h4>La palette du goût</h4>
        <p>Ménilmontant</p>
        <i class="far fa-heart"></i>
       </div>
      </article>
     </a>
-    <a href="/la_note_enchantee.html">
+    <a href="html/la_note_enchantee.html">
      <article>
       <span>Nouveau</span>
-      <img src="" alt="">
+      <img src="/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo d'un plat de la note enchantée">
       <div class="card_desc">
-       <h3>La note enchantée</h3>
+       <h4>La note enchantée</h4>
        <p>Charonne</p>
        <i class="far fa-heart"></i>
       </div>
      </article>
      <span>Nouveau</span>
     </a>
-    <a href="">
+    <a href="html/a_la_française.html">
      <article>
-      <img src="" alt="">
+      <img src="/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat d'a la francaise">
       <div class="card_desc">
-       <h3>À la française</h3>
+       <h4>À la française</h4>
        <p>Cité Rouge
        </p>
        <i class="far fa-heart"></i>
       </div>
      </article>
     </a>
-    <a href="">
+    <a href="html/le_delice_des_sens.html">
      <article>
       <span>Nouveau</span>
-      <img src="" alt="">
+      <img src="/Images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+       alt="photo d'un plat du delice des gouts">
       <div class="card_desc">
-       <h3>Le délice des sens</h3>
+       <h4>Le délice des sens</h4>
        <p>Folie-Méricourt</p>
        <i class="far fa-heart"></i>
       </div>
@@ -115,7 +117,17 @@
   </section>
  </main>
  <!-- SECTION FOOTER -->
- <footer></footer>
+ <footer>
+  <div class="footer_container">
+   <ul>
+    <li><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
+    <li><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></li>
+    <li><a href="#">Mentions légales</a></li>
+    <li><a href="mailto:email@example.com">Contact</a></li>
+    <li><img src="/Images/logo/ohmyfood.png" alt="logo"></li>
+   </ul>
+  </div>
+ </footer>
 
 </body>
 
