--- a/html/le_delice_des_sens.html
+++ b/html/le_delice_des_sens.html
@@ -11,16 +11,181 @@
  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap"
   rel="stylesheet">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
- <title>OhMyFood</title>
+ <link rel="stylesheet" href="css/style.css">
+ <title>OhMyFood Menu Le Délice Des Sens</title>
 </head>
 
 <body>
+ <!-- SECTION HEADER -->
  <header>
-  <img src="/Images/logo/ohmyfood.png" alt="logo" class="header_logo">
+  <div class="header_container">
+   <a href="/index.html"><i class="fas fa-arrow-left"></i></a>
+   <h1><img src="/Images/logo/ohmyfood.png" alt="logo" class="header_logo"></h1>
+  </div>
  </header>
  <main>
+  <!-- SECTION BANNER -->
+  <div>
+   <div class="banner_container">
+    <img src="/Images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+     alt="photo d'un plat le délice des sens">
+   </div>
+  </div>
+  <!-- SECTION MENU -->
+  <section>
+   <div class="menu_container">
+    <div>
+     <h2 class="menu_title">Le Délice des sens</h2>
+     <i class="far fa-heart"></i>
+    </div>
+    <div class="menu">
+     <!-- SECTION STARTER -->
+     <h3 class="menu_title-desc">Entrées</h3>
+     <div class="menu_starter">
+      <div class="menu_starter-choice">
+       <input type="checkbox" name='menu_le_delice_des_sens' id='starter_1'>
+       <label for='starter_1'>
+        <span class='plate_desc'>
+         <span class="plate_title">Tartare de thon</span>
+         <span class='plate_text'>Assaisonné au yuzu</span>
+        </span>
+        <span class='plate_price'>25€</span>
+        <span class='plate_check'>
+         <i class="fas fa-check-circle plate_check-ico"></i>
+        </span>
+       </label>
+      </div>
+      <div class="menu_starter-choice">
+       <input type="checkbox" name='menu_le_delice_des_sens' id='starter_2'>
+       <label for='starter_2'>
+        <span class='plate_desc'>
+         <span class="plate_title">Bouchée de homard croustillant </span>
+         <span class='plate_text'>Et sa farandole de petits légumes</span>
+        </span>
+        <span class='plate_price'>35€</span>
+        <span class='plate_check'>
+         <i class="fas fa-check-circle plate_check-ico"></i>
+        </span>
+       </label>
+      </div>
+      <div class="menu_starter-choice">
+       <input type="checkbox" name='menu_le_delice_des_sens' id='starter_3'>
+       <label for='starter_3'>
+        <span class='plate_desc'>
+         <span class="plate_title">Velouté de cèpes</span>
+         <span class='plate_text'>Aux truffes</span>
+        </span>
+        <span class='plate_price'>20€</span>
+        <span class='plate_check'>
+         <i class="fas fa-check-circle plate_check-ico"></i>
+        </span>
+       </label>
+      </div>
+     </div>
+     <!-- SECTION MAIN COURSE -->
+     <h3 class="menu_title-desc">Plats</h3>
+     <div class="menu_mainCourse">
+      <div class="menu_mainCourse-choice">
+       <input type="checkbox" name='menu_le_delice_des_sens' id='mainCourse_1'>
+       <label for='mainCourse_1'>
+        <span class='plate_desc'>
+         <span class="plate_title">Poulet rôti aux herbes de Provence</span>
+         <span class='plate_text'>Et sa crème de truffe</span>
+        </span>
+        <span class='plate_price'>40€</span>
+        <span class='plate_check'>
+         <i class="fas fa-check-circle plate_check-ico"></i>
+        </span>
+       </label>
+      </div>
+      <div class="menu_mainCourse-choice">
+       <input type="checkbox" name='menu_le_delice_des_sens' id='mainCourse_2'>
+       <label for='mainCourse_2'>
+        <span class='plate_desc'>
+         <span class="plate_title">Langouste rôtie</span>
+         <span class='plate_text'>Et ses légumes de saison</span>
+        </span>
+        <span class='plate_price'>35€</span>
+        <span class='plate_check'>
+         <i class="fas fa-check-circle plate_check-ico"></i>
+        </span>
+       </label>
+      </div>
+      <div class="menu_mainCourse-choice">
+       <input type="checkbox" name='menu_le_delice_des_sens' id='mainCourse_3'>
+       <label for='mainCourse_3'>
+        <span class='plate_desc'>
+         <span class="plate_title">Côte de bœuf Angus</span>
+         <span class='plate_text'>Et sa purée de panais</span>
+        </span>
+        <span class='plate_price'>44€</span>
+        <span class='plate_check'>
+         <i class="fas fa-check-circle plate_check-ico"></i>
+        </span>
+       </label>
+      </div>
+     </div>
+     <!-- SECTION DESSERT -->
+     <h3 class="menu_title-desc">Desserts</h3>
+     <div class="menu_dessert">
+      <div class="menu_dessert-choice">
+       <input type="checkbox" name='menu_le_delice_des_sens' id='dessert_1'>
+       <label for='dessert_1'>
+        <span class='plate_desc'>
+         <span class="plate_title">Farandole de desserts</span>
+         <span class='plate_text'>Du chef</span>
+        </span>
+        <span class='plate_price'>18€</span>
+        <span class='plate_check'>
+         <i class="fas fa-check-circle plate_check-ico"></i>
+        </span>
+       </label>
+      </div>
+      <div class="menu_dessert-choice">
+       <input type="checkbox" name='menu_le_delice_des_sens' id='dessert_2'>
+       <label for='dessert_2'>
+        <span class='plate_desc'>
+         <span class="plate_title">Crème brulée</span>
+         <span class='plate_text'>Revisitée</span>
+        </span>
+        <span class='plate_price'>22€</span>
+        <span class='plate_check'>
+         <i class="fas fa-check-circle plate_check-ico"></i>
+        </span>
+       </label>
+      </div>
+      <div class="menu_dessert-choice">
+       <input type="checkbox" name='menu_le_delice_des_sens' id='dessert_3'>
+       <label for='dessert_3'>
+        <span class='plate_desc'>
+         <span class="plate_title">Tiramisu</span>
+         <span class='plate_text'>À la noisette</span>
+        </span>
+        <span class='plate_price'>23€</span>
+        <span class='plate_check'>
+         <i class="fas fa-check-circle plate_check-ico"></i>
+        </span>
+       </label>
+      </div>
+     </div>
+    </div>
+    <a href="#">Commander</a>
+   </div>
+  </section>
+
  </main>
- <footer></footer>
+ <!-- SECTION FOOTER -->
+ <footer>
+  <div class="footer_container">
+   <ul>
+    <li><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
+    <li><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></li>
+    <li><a href="#">Mentions légales</a></li>
+    <li><a href="mailto:email@example.com">Contact</a></li>
+    <li><img src="/Images/logo/ohmyfood.png" alt="logo"></li>
+   </ul>
+  </div>
+ </footer>
 
 </body>
 
