--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   rel="stylesheet">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
  <link rel="stylesheet" href="css/style.css">
- <title>OhMyFood</title>
+ <title>OhMyFood Accueil</title>
 </head>
 
 <body>
- <!-- HEADER -->
+ <!-- SECTION HEADER -->
  <header>
   <div class="header_container">
    <h1><img src="/Images/logo/ohmyfood.png" alt="logo" class="header_logo"></h1>
