--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   <!-- SECTION LOCALISATION -->
   <div class="localisation">
    <div class="localisation_container">
-    <form>
+    <form class="localisation_form">
      <i class="fas fa-map-marker-alt localisation_ico"></i>
-     <input type="search" value="Paris, Belleville">
+     <input type="search" value="Paris, Belleville" class="localisation_search">
     </form>
    </div>
   </div>
@@ -36,27 +36,27 @@
   <!-- SECTION PRESENTATION -->
   <section class="presentation">
    <div class="presentation_container">
-    <h2>Réservez le menu qui vous convient</h2>
-    <p>Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
-    <a href="#">Explorer nos restaurants</a>
+    <h2 class="presentation_title">Réservez le menu qui vous convient</h2>
+    <p class="presentation_desc">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
+    <a href="#" class="btn_1">Explorer nos restaurants</a>
    </div>
   </section>
   <!-- SECTION FONCTIONNEMENT -->
   <section class="howToUse">
    <div class="howToUse_container">
-    <h3>Fonctionnement</h3>
-    <button>
-     <span>1</span>
+    <h3 class="howToUse_title">Fonctionnement</h3>
+    <button class="btn_2">
+     <span class="btn_2-1">1</span>
      <i class="fas fa-mobile-alt"></i>
      Choisissez un restaurant
     </button>
-    <button>
-     <span>2</span>
+    <button class="btn_2">
+     <span class="btn_2-1">2</span>
      <i class="fas fa-list-ul"></i>
      Composez votre menu
     </button>
-    <button>
-     <span>3</span>
+    <button class="btn_2">
+     <span class="btn_2-1">3</span>
      <i class="fas fa-store"></i>
      Dégustez au restaurant
     </button>
