bug nesting index html & heat ico sass & added howtouse/restaurant/footer sass

--- a/html/la_note_enchantee.html
+++ b/html/la_note_enchantee.html
@@ -5,13 +5,12 @@
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="css/style.css">
+ <link rel="stylesheet" href="/css/style.css">
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap"
   rel="stylesheet">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
- <link rel="stylesheet" href="css/style.css">
  <title>OhMyFood Menu de La Note Enchantée</title>
 </head>
 
@@ -190,11 +189,13 @@
  <footer>
   <div class="footer_container">
    <ul>
-    <li><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
-    <li><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></li>
-    <li><a href="#">Mentions légales</a></li>
-    <li><a href="mailto:email@example.com">Contact</a></li>
-    <li><img src="/Images/logo/ohmyfood.png" alt="logo"></li>
+    <li>
+     <h5 class="footer_title">ohmyfood</h5>
+    </li>
+    <li><i class="fas fa-utensils footer_ico"></i><a href="#" class="footer_link">Proposer un restaurant</a></li>
+    <li><i class="fas fa-hands-helping footer_ico"></i><a href="#" class="footer_link">Devenir partenaire</a></li>
+    <li><a href="#" class="footer_link">Mentions légales</a></li>
+    <li><a href="mailto:email@example.com" class="footer_link">Contact</a></li>
    </ul>
   </div>
  </footer>
