--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 </head>
 
 <body>
+ <!-- SECTION LOADER -->
+ <div class="loader">
+  <div class="dot_1"></div>
+  <div class="dot_2"></div>
+  <div class="dot_1"></div>
+  <div class="dot_2"></div>
+  <div class="dot_1"></div>
+  <div class="dot_2"></div>
+ </div>
  <!-- SECTION HEADER -->
  <header>
   <div class="header_container">
@@ -65,8 +74,8 @@
   <section class="restaurant">
    <div class="restaurant_container">
     <h3 class="restaurant_title">Restaurants</h3>
-    <article class="restaurant_card">
-     <a href="html/la_palette_du_gout.html" target="_blank">
+    <a href="html/la_palette_du_gout.html">
+     <article class="restaurant_card">
       <span class="restaurant_new">Nouveau</span>
       <img src="/Images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="restaurant_card-img"
        alt="photo d'un plat de la palette du gout">
@@ -75,11 +84,15 @@
         <h4 class="card_title">La palette du goût</h4>
         <p class="card_txt">Ménilmontant</p>
        </div>
-       <i class="far fa-heart card_heart-off card_heart-on"></i>
-     </a>
-    </article>
-    <article class="restaurant_card">
-     <a href="html/la_note_enchantee.html" target="_blank">
+       <div class="card_heart">
+        <i class="far fa-heart card_heart-off" aria-hidden="true"></i>
+        <i class="fas fa-heart card_heart-on" aria-hidden="true"></i>
+       </div>
+      </div>
+     </article>
+    </a>
+    <a href="html/la_note_enchantee.html">
+     <article class="restaurant_card">
       <span class="restaurant_new">Nouveau</span>
       <img src="/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg " class="restaurant_card-img"
        alt="photo d'un plat de la note enchantée">
@@ -88,37 +101,46 @@
         <h4 class="card_title">La note enchantée</h4>
         <p class="card_txt">Charonne</p>
        </div>
-     </a>
-     <i class="far fa-heart"></i>
-   </div>
-   </article>
-   <article class="restaurant_card">
-    <a href="html/a_la_française.html" target="_blank">
-     <img src="/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="restaurant_card-img"
-      alt="photo d'un plat d'a la francaise">
-     <div class="restaurant_card-desc">
-      <div class="restaurant_card-txt">
-       <h4 class="card_title">À la française</h4>
-       <p class="card_txt">Cité Rouge
-       </p>
+       <div class="card_heart">
+        <i class="far fa-heart card_heart-off" aria-hidden="true"></i>
+        <i class="fas fa-heart card_heart-on" aria-hidden="true"></i>
+       </div>
       </div>
+     </article>
     </a>
-    <i class="far fa-heart"></i>
-    </div>
-   </article>
-   <article class="restaurant_card">
-    <a href="html/le_delice_des_sens.html" target="_blank">
-     <img src="/Images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="restaurant_card-img"
-      alt="photo d'un plat du delice des gouts">
-     <div class="restaurant_card-desc">
-      <div class="restaurant_card-txt">
-       <h4 class="card_title">Le délice des sens</h4>
-       <p class="card_txt">Folie-Méricourt</p>
+    <a href="html/a_la_française.html">
+     <article class="restaurant_card">
+      <img src="/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="restaurant_card-img"
+       alt="photo d'un plat d'a la francaise">
+      <div class="restaurant_card-desc">
+       <div class="restaurant_card-txt">
+        <h4 class="card_title">À la française</h4>
+        <p class="card_txt">Cité Rouge
+        </p>
+       </div>
+       <div class="card_heart">
+        <i class="far fa-heart card_heart-off" aria-hidden="true"></i>
+        <i class="fas fa-heart card_heart-on" aria-hidden="true"></i>
+       </div>
       </div>
+     </article>
     </a>
-    <i class="far fa-heart"></i>
-    </div>
-   </article>
+    <a href="html/le_delice_des_sens.html">
+     <article class="restaurant_card">
+      <img src="/Images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="restaurant_card-img"
+       alt="photo d'un plat du delice des gouts">
+      <div class="restaurant_card-desc">
+       <div class="restaurant_card-txt">
+        <h4 class="card_title">Le délice des sens</h4>
+        <p class="card_txt">Folie-Méricourt</p>
+       </div>
+       <div class="card_heart">
+        <i class="far fa-heart card_heart-off" aria-hidden="true"></i>
+        <i class="fas fa-heart card_heart-on" aria-hidden="true"></i>
+       </div>
+      </div>
+     </article>
+    </a>
    </div>
   </section>
  </main>
