--- a/index.html
+++ b/index.html
@@ -50,104 +50,96 @@
    </div>
   </section>
   <!-- SECTION FONCTIONNEMENT -->
-  <section class="howToUse">
+  <section class="howToUse container">
    <div class="howToUse_container">
     <h3 class="howToUse_title">Fonctionnement</h3>
-    <button class="btn_2">
-     <span class="btn_2-1">1</span>
-     <i class="fas fa-mobile-alt btn_2-ico"></i>
-     <span class="btn_2-txt">Choisissez un restaurant</span>
-    </button>
-    <button class="btn_2">
-     <span class="btn_2-1">2</span>
-     <i class="fas fa-list-ul btn_2-ico"></i>
-     <span class="btn_2-txt">Composez votre menu</span>
-    </button>
-    <button class="btn_2">
-     <span class="btn_2-1">3</span>
-     <i class="fas fa-store btn_2-ico"></i>
-     <span class="btn_2-txt">Dégustez au restaurant</span>
-    </button>
+    <div class="howToUse_flex">
+     <button class="btn_2">
+      <span class="btn_2-1">1</span>
+      <i class="fas fa-mobile-alt btn_2-ico"></i>
+      <span class="btn_2-txt">Choisissez un restaurant</span>
+     </button>
+     <button class="btn_2">
+      <span class="btn_2-1">2</span>
+      <i class="fas fa-list-ul btn_2-ico"></i>
+      <span class="btn_2-txt">Composez votre menu</span>
+     </button>
+     <button class="btn_2">
+      <span class="btn_2-1">3</span>
+      <i class="fas fa-store btn_2-ico"></i>
+      <span class="btn_2-txt">Dégustez au restaurant</span>
+     </button>
+    </div>
    </div>
   </section>
   <!-- SECTION RESTAURANT -->
   <section class="restaurant">
-   <div class="restaurant_container">
+   <div class="restaurant_container container">
     <h3 class="restaurant_title">Restaurants</h3>
-    <a href="html/la_palette_du_gout.html">
+    <div class="restaurant_flex">
      <article class="restaurant_card">
-      <span class="restaurant_new">Nouveau</span>
-      <img src="/Images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="restaurant_card-img"
-       alt="photo d'un plat de la palette du gout">
-      <div class="restaurant_card-desc">
-       <div class="restaurant_card-txt">
-        <h4 class="card_title">La palette du goût</h4>
-        <p class="card_txt">Ménilmontant</p>
-       </div>
-       <div class="card_heart">
-        <i class="far fa-heart card_heart-off" aria-hidden="true"></i>
-        <i class="fas fa-heart card_heart-on" aria-hidden="true"></i>
-       </div>
-      </div>
+      <a href="html/la_palette_du_gout.html">
+       <span class="restaurant_new">Nouveau</span>
+       <img src="/Images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="restaurant_card-img"
+        alt="photo d'un plat de la palette du gout">
+       <h4 class="card_title">La palette du goût</h4>
+       <p class="card_txt">Ménilmontant</p>
+      </a>
+      <input type='checkbox' class='card_checkbox ' name='like' id='la_palette_du_gout'>
+      <label for='la_palette_du_gout' class='heart'>
+       <i class="far fa-heart heart_empty"></i>
+       <span class='heart_filter'><i class="fas fa-heart heart_filter-full"></i></span>
+      </label>
      </article>
-    </a>
-    <a href="html/la_note_enchantee.html">
      <article class="restaurant_card">
-      <span class="restaurant_new">Nouveau</span>
-      <img src="/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg " class="restaurant_card-img"
-       alt="photo d'un plat de la note enchantée">
-      <div class="restaurant_card-desc">
-       <div class="restaurant_card-txt">
-        <h4 class="card_title">La note enchantée</h4>
-        <p class="card_txt">Charonne</p>
-       </div>
-       <div class="card_heart">
-        <i class="far fa-heart card_heart-off" aria-hidden="true"></i>
-        <i class="fas fa-heart card_heart-on" aria-hidden="true"></i>
-       </div>
-      </div>
+      <a href="html/la_note_enchantee.html">
+       <span class="restaurant_new">Nouveau</span>
+       <img src="/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg " class="restaurant_card-img"
+        alt="photo d'un plat de la note enchantée">
+       <h4 class="card_title">La note enchantée</h4>
+       <p class="card_txt">Charonne</p>
+      </a>
+      <input type='checkbox' class='card_checkbox ' name='like' id='la_note_enchantee'>
+      <label for='la_note_enchantee' class='heart'>
+       <i class="far fa-heart heart_empty"></i>
+       <span class='heart_filter'><i class="fas fa-heart heart_filter-full"></i></span>
+      </label>
      </article>
-    </a>
-    <a href="html/a_la_française.html">
      <article class="restaurant_card">
-      <img src="/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="restaurant_card-img"
-       alt="photo d'un plat d'a la francaise">
-      <div class="restaurant_card-desc">
-       <div class="restaurant_card-txt">
-        <h4 class="card_title">À la française</h4>
-        <p class="card_txt">Cité Rouge
-        </p>
-       </div>
-       <div class="card_heart">
-        <i class="far fa-heart card_heart-off" aria-hidden="true"></i>
-        <i class="fas fa-heart card_heart-on" aria-hidden="true"></i>
-       </div>
-      </div>
+      <a href="html/a_la_française.html">
+       <img src="/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="restaurant_card-img"
+        alt="photo d'un plat d'a la francaise">
+       <h4 class="card_title">À la française</h4>
+       <p class="card_txt">Cité Rouge
+       </p>
+      </a>
+      <input type='checkbox' class='card_checkbox ' name='like' id='a_la_française'>
+      <label for='a_la_française' class='heart'>
+       <i class="far fa-heart heart_empty"></i>
+       <span class='heart_filter'><i class="fas fa-heart heart_filter-full"></i></span>
+      </label>
      </article>
-    </a>
-    <a href="html/le_delice_des_sens.html">
      <article class="restaurant_card">
-      <img src="/Images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="restaurant_card-img"
-       alt="photo d'un plat du delice des gouts">
-      <div class="restaurant_card-desc">
-       <div class="restaurant_card-txt">
-        <h4 class="card_title">Le délice des sens</h4>
-        <p class="card_txt">Folie-Méricourt</p>
-       </div>
-       <div class="card_heart">
-        <i class="far fa-heart card_heart-off" aria-hidden="true"></i>
-        <i class="fas fa-heart card_heart-on" aria-hidden="true"></i>
-       </div>
-      </div>
+      <a href="html/le_delice_des_sens.html">
+       <img src="/Images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="restaurant_card-img"
+        alt="photo d'un plat du delice des gouts">
+       <h4 class="card_title">Le délice des sens</h4>
+       <p class="card_txt">Folie-Méricourt</p>
+      </a>
+      <input type='checkbox' class='card_checkbox ' name='like' id='ledelice_des_sens'>
+      <label for='ledelice_des_sens' class='heart'>
+       <i class="far fa-heart heart_empty"></i>
+       <span class='heart_filter'><i class="fas fa-heart heart_filter-full"></i></span>
+      </label>
      </article>
-    </a>
+    </div>
    </div>
   </section>
  </main>
  <!-- SECTION FOOTER -->
- <footer>
-  <div class="footer_container">
-   <ul>
+ <footer class="footer">
+  <div class="footer_container container">
+   <ul class="footer_flex">
     <li>
      <h5 class="footer_title">ohmyfood</h5>
     </li>
