bugfix heart & rename variable

--- a/index.html
+++ b/index.html
@@ -84,11 +84,8 @@
        <h4 class="card_title">La palette du goût</h4>
        <p class="card_txt">Ménilmontant</p>
       </a>
-      <input type='checkbox' class='card_checkbox ' name='like' id='la_palette_du_gout'>
-      <label for='la_palette_du_gout' class='heart'>
-       <i class="far fa-heart heart_empty"></i>
-       <span class='heart_filter'><i class="fas fa-heart heart_filter-full"></i></span>
-      </label>
+      <i class="far fa-heart heart_empty"></i>
+      <i class="fas fa-heart heart_full"></i>
      </article>
      <article class="restaurant_card">
       <a href="html/la_note_enchantee.html">
@@ -98,11 +95,8 @@
        <h4 class="card_title">La note enchantée</h4>
        <p class="card_txt">Charonne</p>
       </a>
-      <input type='checkbox' class='card_checkbox ' name='like' id='la_note_enchantee'>
-      <label for='la_note_enchantee' class='heart'>
-       <i class="far fa-heart heart_empty"></i>
-       <span class='heart_filter'><i class="fas fa-heart heart_filter-full"></i></span>
-      </label>
+      <i class="far fa-heart heart_empty"></i>
+      <i class="fas fa-heart heart_full"></i>
      </article>
      <article class="restaurant_card">
       <a href="html/a_la_française.html">
@@ -112,11 +106,8 @@
        <p class="card_txt">Cité Rouge
        </p>
       </a>
-      <input type='checkbox' class='card_checkbox ' name='like' id='a_la_française'>
-      <label for='a_la_française' class='heart'>
-       <i class="far fa-heart heart_empty"></i>
-       <span class='heart_filter'><i class="fas fa-heart heart_filter-full"></i></span>
-      </label>
+      <i class="far fa-heart heart_empty"></i>
+      <i class="fas fa-heart heart_full"></i>
      </article>
      <article class="restaurant_card">
       <a href="html/le_delice_des_sens.html">
@@ -125,11 +116,8 @@
        <h4 class="card_title">Le délice des sens</h4>
        <p class="card_txt">Folie-Méricourt</p>
       </a>
-      <input type='checkbox' class='card_checkbox ' name='like' id='ledelice_des_sens'>
-      <label for='ledelice_des_sens' class='heart'>
-       <i class="far fa-heart heart_empty"></i>
-       <span class='heart_filter'><i class="fas fa-heart heart_filter-full"></i></span>
-      </label>
+      <i class="far fa-heart heart_empty"></i>
+      <i class="fas fa-heart heart_full"></i>
      </article>
     </div>
    </div>
